FIX: major things on mobile

--- a/components/homepage/endAutomation/styles.module.scss
+++ b/components/homepage/endAutomation/styles.module.scss
@@ -62,12 +62,48 @@
 
     .imageCard {
       position: relative;
-      height: 300px;
+      height: 350px;
       width: 100%;
-      bottom: -50px;
+      bottom: 0px;
 
       @include mobile {
         height: 140px;
+        bottom: 0px;
+        position: absolute;
+      }
+
+      img {
+        object-fit: contain;
+        object-position: right;
+      }
+    }
+
+    .imageCard2 {
+      position: relative;
+      height: 350px;
+      width: 100%;
+      bottom: 0;
+
+      @include mobile {
+        height: 140px;
+        bottom: 0px;
+        position: absolute;
+      }
+
+      img {
+        object-fit: contain;
+        object-position: right;
+      }
+    }
+
+    .imageCard3 {
+      position: relative;
+      height: 450px;
+      width: 100%;
+      bottom: 106px;
+
+      @include mobile {
+        height: 180px;
         bottom: 0px;
         position: absolute;
       }
@@ -108,7 +144,7 @@
       color: $black;
 
       @include mobile {
-        font-size: 12px;
+        font-size: 11px;
         line-height: 20px;
         gap: 0 10px;
       }
