--- a/pages/homepage/styles.module.scss
+++ b/pages/homepage/styles.module.scss
@@ -8,7 +8,7 @@
   overflow-x: hidden;
 
   @include mobile {
-    padding-top: 50px;
+    padding-top: 100px;
   }
   
   .footerSection {
